--- a/COP3503.cbp
+++ b/COP3503.cbp
@@ -18,7 +18,7 @@
 			<Target title="Release">
 				<Option output="bin/Release/COP3503" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -30,7 +30,12 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="SDL2" />
 		</Compiler>
+		<Linker>
+			<Add option="-lmingw32 -lSDL2main -lSDL2" />
+			<Add directory="SDL2/lib" />
+		</Linker>
 		<Extensions>
 			<code_completion />
 			<envvars />
