--- a/COP3503.cbp
+++ b/COP3503.cbp
@@ -30,12 +30,13 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="lib/SDL2" />
+			<Add directory="lib/SDL2/include/SDL2" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2" />
 			<Add directory="lib/SDL2/lib" />
 		</Linker>
+		<Unit filename="src/01_hello_SDL.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
