--- a/COP3503_unix.cbp
+++ b/COP3503_unix.cbp
@@ -35,7 +35,7 @@
 			<Add directory="migw_libs/include/SDL2" />
 		</Compiler>
 		<Linker>
-			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
+			<Add option="-lSDL2main -lSDL2 -lSDL2_image" />
 			<Add directory="lib/SDL2/lib" />
 			<Add directory="migw_libs/lib" />
 		</Linker>
