--- a/COP3503.cbp
+++ b/COP3503.cbp
@@ -40,6 +40,7 @@
 			<Add directory="lib/SDL2/lib" />
 			<Add directory="migw_libs/lib" />
 		</Linker>
+		<Unit filename="include/Player.h" />
 		<Unit filename="include/Territory.h" />
 		<Unit filename="include/World.h" />
 		<Unit filename="src/Territory.cpp" />
