--- a/COP3503.cbp
+++ b/COP3503.cbp
@@ -43,6 +43,7 @@
 		<Unit filename="include/Player.h" />
 		<Unit filename="include/Territory.h" />
 		<Unit filename="include/World.h" />
+		<Unit filename="src/Player.cpp" />
 		<Unit filename="src/Territory.cpp" />
 		<Unit filename="src/World.cpp" />
 		<Unit filename="src/main.cpp" />
